feat: add activation and deploy
