# src/controllers/auth.controller.ts
@@ -23,18 +23,26 @@ const registerValidateSchema = Yup.object({
   username: Yup.string().required(),
   email: Yup.string().required(),
   password: Yup.string()
-  .required()
-  .min(6, "Password must be at least 6 character")
-  .test('at-least-one-uppercase-letter', "Password must contains at least one uppercase letter", (value) => {
-    if(!value) return false;
-    const regex = /^(?=.*[A-Z])/
-    return regex.test(value)
-  })
-  .test('at-least-one-nummber', "Password must contains at least one number", (value) => {
-    if(!value) return false;
-    const regex = /^(?=.*\d)/
-    return regex.test(value)
-  }),
+    .required()
+    .min(6, "Password must be at least 6 character")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Password must contains at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test(
+      "at-least-one-nummber",
+      "Password must contains at least one number",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*\d)/;
+        return regex.test(value);
+      }
+    ),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Password not match!"),
@@ -44,6 +52,10 @@ export default {
   async register(req: Request, res: Response) {
     /**
    #swagger.tags = ['Auth']
+   #swagger.requestBody = {
+      required: true,
+      schema: {$ref: '#/components/schemas/RegisterRequest'}
+     }
    */
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister;
@@ -98,6 +110,7 @@ export default {
             username: identifier,
           },
         ],
+        isActive: true
       });
 
       if (!userByIdentifier) {
@@ -151,6 +164,40 @@ export default {
       res.status(200).json({
         message: "Success get User Profile",
         data: result,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
+
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+      required: true,
+      schema: {$ref: '#/components/schemas/ActivationRequest'}
+     }
+     */
+    try {
+      const { code } = req.body as { code: string };
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+      res.status(200).json({
+        message: "User Successfully Activate",
+        data: user,
       });
     } catch (error) {
       const err = error as unknown as Error;
